--- a/index.html
+++ b/index.html
@@ -205,13 +205,14 @@
       text-align: center;
     }
 
-    .social-icons {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 14px;
-      align-items: center;
-      justify-content: center; /* centers the icons */
-    }
+.social-icons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;   /* was 14px */
+  align-items: center;
+  justify-content: center;
+}
+
 
     .social-icons a {
       text-decoration: none !important;
