--- a/index.html
+++ b/index.html
@@ -235,11 +235,12 @@
 }
 
 
-    .social-icons a:hover img {
-      filter: grayscale(0%);
-      opacity: 1;
-      transform: translateY(-3px);
-    }
+.social-icons a:hover img {
+  filter: grayscale(0%);
+  opacity: 1;
+  transform: translateY(-5px); /* was -3px */
+}
+
   </style>
 </head>
 
