--- a/index.html
+++ b/index.html
@@ -171,18 +171,19 @@
 
     .pill:hover { background: #f2f2f2; }
 
-    .cta {
-      margin-top: 30px;
-      padding: 16px;
-      border: 1px solid #ddd;
-      border-radius: 14px;
-      background: #fbfbfb;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
+.cta {
+  margin-top: 30px;
+  padding: 16px;
+  border: 1px solid #ddd;
+  border-radius: 14px;
+  background: #fbfbfb;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 12px;
+  flex-wrap: wrap;
+}
+
 
     .cta p {
       margin: 0;
