--- a/index.html
+++ b/index.html
@@ -191,6 +191,18 @@
       line-height: 1.6;
     }
 
+    @media (max-width: 480px) {
+  .cta p {
+    font-size: 15px;
+    line-height: 1.7;
+  }
+
+  .quick-access {
+    margin-top: 12px;
+  }
+}
+
+
     /* ===== Quick Access social icons (centered) ===== */
     .quick-access {
       margin-top: 14px;
