--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
     text-align: center;
   }
 }
+@media (max-width: 480px) {
+  .hero-actions a {
+    width: 100%;
+    text-align: center;
+  }
+}
 
 
   </style>
