--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
     text-align: center;
   }
 }
+@media (max-width: 480px) {
+  .social-icons a {
+    padding: 10px; /* increases tap target */
+  }
+}
 
 
   </style>
