--- a/index.html
+++ b/index.html
@@ -407,27 +407,27 @@
         <h3>Quick Access</h3>
         <div class="social-icons">
           <a href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar">
+            <img src="icons/google-scholar.svg" alt="Google Scholar">
           </a>
 
           <a href="https://www.linkedin.com/in/musfiqur37/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+            <img src="icons/linkedin.png" alt="LinkedIn">
           </a>
 
           <a href="https://www.researchgate.net/profile/Musfiqur-Rahman-20?ev=hdr_xprf" target="_blank" rel="noopener noreferrer" aria-label="ResearchGate">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate">
+            <img src="icons/researchgate.svg" alt="ResearchGate">
           </a>
 
           <a href="https://villanova.academia.edu/MusfiqurRahman" target="_blank" rel="noopener noreferrer" aria-label="Academia.edu">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Academia-logo-2021.svg" alt="Academia.edu">
+            <img src="icons/academia.svg" alt="Academia.edu">
           </a>
 
           <a href="https://github.com/MusfiqurRahman" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+            <img src="icons/github.png" alt="GitHub">
           </a>
 
           <a href="https://orcid.org/0009-0002-9865-6739" target="_blank" rel="noopener noreferrer" aria-label="ORCID">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/ORCID_iD.svg" alt="ORCID">
+            <img src="icons/orcid.svg" alt="ORCID">
           </a>
         </div>
       </div>
