--- a/index.html
+++ b/index.html
@@ -291,11 +291,29 @@
   <section class="section">
     <h2>Impact &amp; Relevance</h2>
     <div class="impact-box">
-      <ul>
-        <li><strong>Urban resilience:</strong> supports proactive screening and maintenance prioritization for stormwater assets to reduce flood and nuisance ponding risk.</li>
-        <li><strong>Decision support:</strong> integrates monitoring, modeling (e.g., SWMM), and machine learning to forecast performance and classify risk.</li>
-        <li><strong>Scalable methods:</strong> designed for transferability across municipalities using environmental context (land cover/land use) and community vulnerability indicators.</li>
-      </ul>
+<ul>
+  <li>
+    <strong>Urban flood resilience (U.S.-focused, globally informed):</strong>
+    Develops data-driven frameworks to support proactive screening, maintenance prioritization, and performance forecasting
+    for stormwater and green stormwater infrastructure (GSI) systems in U.S. cities, informed by applied experience in
+    flood-prone urban environments.
+  </li>
+
+  <li>
+    <strong>Decision-relevant modeling and analytics:</strong>
+    Integrates monitoring data, hydrologic and hydraulic modeling (e.g., SWMM, HEC-RAS), and machine learning to generate
+    defensible, actionable insights that support municipal stormwater planning, risk classification, and infrastructure
+    management.
+  </li>
+
+  <li>
+    <strong>Scalable and transferable methods:</strong>
+    Designs approaches that generalize across municipalities by incorporating environmental context (land cover and land use)
+    and community vulnerability indicators, drawing on professional experience from large-scale government water and flood
+    management projects in Bangladesh to inform robust, real-world implementation.
+  </li>
+</ul>
+
     </div>
   </section>
 
