--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@ The publications listed below demonstrate research contributions directly aligne
   <a class="btn" href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank">Full list on Google Scholar</a>
 </div>
 
-<h2 class="section-title">Selected (Most Relevant)</h2>
+<h2 class="section-title">Selected </h2>
 
 <div class="pub-wrap">
 
